figue/tests/integration/snapshots/main__integration__err__error_unexpected_positional_arg.snap
---
source: crates/figue/tests/integration/err.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
Error: could not parse command-line arguments

Sources:
├─ cli --settings.*
└─ defaults

name.. value.. --name

Run with --help for usage information.
Error: unexpected argument: unexpected
   ╭─[ <cli>:1:1 ]
   │
 1 │ unexpected --name value
   │ ─────┬────  
   │      ╰────── unexpected argument: unexpected
───╯
